--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -53,3 +53,17 @@ jobs:
            name: Code-Coverage-Result
            path: coverage
            retention-days: 5
+    dev-deploy:
+      runs-on: ubuntu-latest
+      environment: development
+      steps:
+        - uses: actions/checkout@v4
+        - uses: azure/setup-kubectl@v3
+          with:
+              version: v1.26.0
+        - uses: azure/k8s-set-context@v3
+          with:
+            method: kubeconfig
+            kubeconfig: ${{secrets.KUBECONFIG}}
+
+        - run : kubectl version --short -o yaml
