--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -88,7 +88,7 @@ jobs:
             method: kubeconfig
             kubeconfig: ${{secrets.KUBECONFIG}}
 
-        - run : kubectl version --short -o yaml
+        - run : kubectl version --short 
         - run: >
               echo "INGRESS_IP=$(kubectl -n ingress-nginx get services
               ingress-nginx-controller -o
